# fsu-demo

./: .gitignore  README.md  llm_tasks.py  main.py  pyproject.toml
backend/: __init__.py  main.py  models.py  scenarios.py  scoring.py
frontend/: index.html  simulation.js  styles.css
