[project]
name = "fsu-demo"
version = "0.1.0"
description = "Executive Function POC - A 10-minute workplace simulation for testing executive function skills"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.14",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34.3",
]

